--- a/project3.html
+++ b/project3.html
@@ -129,7 +129,8 @@
         <div>
             <a href="index.html" class="back-link">← Back to portfolio</a>
             <div class="description">
-                <span class="brand-name">TRENDYOL</span> is a leading Turkish e-commerce platform. As part of the collaboration, 
+                <span class="brand-name">TRENDYOL</span> is a leading Turkish e-commerce platform. 
+                <br>As part of the collaboration, 
                 I developed printed flyers, visually structuring voluminous business information into concise, easy-to-read materials. 
                 Working under tight deadlines, I transformed complex data on the company's growth and key achievements into clear 
                 visual storytelling that highlighted the brand's value and market dynamics.
