--- a/project3.html
+++ b/project3.html
@@ -45,22 +45,26 @@
             z-index: 10;
         }
 
+        /* Унифицированный размер шрифта 15px */
+        .back-link, .description, .nav-arrows, .footer-bottom {
+            font-size: 15px;
+        }
+
         .back-link {
             text-decoration: none;
             color: #0D0D0D;
-            font-size: 15px;
             text-transform: uppercase;
             letter-spacing: 0.1em;
             display: inline-block;
-            /* Убираем лишние зазоры сверху */
             line-height: 1;
         }
 
         .description {
-            font-size: 15px; 
             line-height: 18px; 
-            max-width: 500px;
+            max-width: 480px;
             margin-top: 40px;
+            text-align: justify; /* Выравнивание по ширине */
+            text-align-last: left; /* Последняя строка прижата влево */
         }
 
         .brand-name {
@@ -72,13 +76,11 @@
             display: flex;
             flex-direction: column;
             gap: 10px; 
-            /* Убираем трансформацию, так как теперь работаем через padding контейнера */
         }
 
         .nav-arrows {
             display: flex;
             justify-content: space-between;
-            font-size: 13px;
             margin-bottom: 10px;
         }
 
@@ -93,7 +95,6 @@
         .footer-bottom {
             display: flex;
             justify-content: space-between;
-            font-size: 13px;
             align-items: center;
             line-height: 1;
         }
@@ -115,7 +116,6 @@
         }
 
         #dynamic-work {
-            /* Фото занимает 80% высоты, центрировано — значит сверху и снизу остается по 10% */
             width: 80%;
             height: 80vh;
             object-fit: contain;
@@ -130,11 +130,9 @@
             <a href="index.html" class="back-link">← Back to portfolio</a>
             <div class="description">
                 <span class="brand-name">TRENDYOL</span> is a leading Turkish e-commerce platform. 
-                <br>As part of the collaboration, 
-                I developed printed flyers, visually structuring voluminous business information into concise, easy-to-read materials. 
-                Working under tight deadlines, I transformed complex data on the company's growth and key achievements into clear 
-                visual storytelling that highlighted the brand's value and market dynamics.
-</div>
+                <br><br>
+                As part of the collaboration, I developed printed flyers, visually structuring voluminous business information into concise, easy-to-read materials. Working under tight deadlines, I transformed complex data on the company's growth and key achievements into clear visual storytelling that highlighted the brand's value and market dynamics.
+            </div>
         </div>
 
         <div class="left-footer">
