--- a/project4.html
+++ b/project4.html
@@ -45,22 +45,26 @@
             z-index: 10;
         }
 
+        /* Унифицированный шрифт 15px для всех элементов */
+        .back-link, .description, .nav-arrows, .footer-bottom {
+            font-size: 15px;
+        }
+
         .back-link {
             text-decoration: none;
             color: #0D0D0D;
-            font-size: 15px;
             text-transform: uppercase;
             letter-spacing: 0.1em;
             display: inline-block;
-            /* Убираем лишние зазоры сверху */
             line-height: 1;
         }
 
         .description {
-            font-size: 15px; 
             line-height: 18px; 
-            max-width: 500px;
+            max-width: 480px;
             margin-top: 40px;
+            text-align: justify;
+            text-align-last: left;
         }
 
         .brand-name {
@@ -72,14 +76,12 @@
             display: flex;
             flex-direction: column;
             gap: 10px; 
-            /* Убираем трансформацию, так как теперь работаем через padding контейнера */
         }
 
         .nav-arrows {
             display: flex;
             justify-content: space-between;
-            font-size: 13px;
-            margin-bottom: 10px;
+            margin-bottom: 5px;
         }
 
         .nav-arrows a {
@@ -93,7 +95,6 @@
         .footer-bottom {
             display: flex;
             justify-content: space-between;
-            font-size: 13px;
             align-items: center;
             line-height: 1;
         }
@@ -115,7 +116,6 @@
         }
 
         #dynamic-work {
-            /* Фото занимает 80% высоты, центрировано — значит сверху и снизу остается по 10% */
             width: 80%;
             height: 80vh;
             object-fit: contain;
@@ -129,12 +129,10 @@
         <div>
             <a href="index.html" class="back-link">← Back to portfolio</a>
             <div class="description">
-                <span class="brand-name">KAA by Bill Kaulitz</span> is a perfume brand. As part of the collaboration, 
-                <br>I served as the brand's photographer, 
-              responsible for the creative concept, styling, shooting, and post-production of visuals for social media. My task was to create 
-              content that reinforces the brand's character and supports
-                <br>its recognizable visual language.
-</div>
+                <span class="brand-name">KAA by Bill Kaulitz</span> is a perfume brand. As part of the collaboration, I served as the brand's photographer, responsible for the creative concept, styling, shooting, and post-production of visuals for social media. 
+                <br><br>
+                My task was to create content that reinforces the brand's character and supports its recognizable visual language.
+            </div>
         </div>
 
         <div class="left-footer">
@@ -163,17 +161,3 @@
             'work36.png',
             'work37.png'
         ];
-
-        let currentIndex = 0;
-        const dynamicImg = document.getElementById('dynamic-work');
-
-        function changeImage() {
-            currentIndex = (currentIndex + 1) % images.length;
-            dynamicImg.src = images[currentIndex];
-        }
-
-        setInterval(changeImage, 1000);
-    </script>
-
-</body>
-</html>
