--- a/project7.html
+++ b/project7.html
@@ -38,29 +38,33 @@
             display: flex;
             flex-direction: column;
             justify-content: space-between;
-            /* 10vh сверху и снизу выравнивают текст по границе фото (которое 80vh) */
+            /* Выравнивание: 10% высоты экрана сверху и снизу */
             padding: 10vh 80px; 
             box-sizing: border-box;
             background: #ffffff;
             z-index: 10;
         }
 
+        /* Унифицированный шрифт 15px */
+        .back-link, .description, .nav-arrows, .footer-bottom {
+            font-size: 15px;
+        }
+
         .back-link {
             text-decoration: none;
             color: #0D0D0D;
-            font-size: 15px;
             text-transform: uppercase;
             letter-spacing: 0.1em;
             display: inline-block;
-            /* Убираем лишние зазоры сверху */
             line-height: 1;
         }
 
         .description {
-            font-size: 15px; 
             line-height: 18px; 
-            max-width: 500px;
+            max-width: 480px;
             margin-top: 40px;
+            text-align: justify; /* Растягиваем текст по краям */
+            text-align-last: left; /* Последняя строка всегда слева */
         }
 
         .brand-name {
@@ -72,14 +76,12 @@
             display: flex;
             flex-direction: column;
             gap: 10px; 
-            /* Убираем трансформацию, так как теперь работаем через padding контейнера */
         }
 
         .nav-arrows {
             display: flex;
             justify-content: space-between;
-            font-size: 13px;
-            margin-bottom: 10px;
+            margin-bottom: 5px;
         }
 
         .nav-arrows a {
@@ -93,7 +95,6 @@
         .footer-bottom {
             display: flex;
             justify-content: space-between;
-            font-size: 13px;
             align-items: center;
             line-height: 1;
         }
@@ -115,65 +116,4 @@
         }
 
         #dynamic-work {
-            /* Фото занимает 80% высоты, центрировано — значит сверху и снизу остается по 10% */
-            width: 80%;
-            height: 80vh;
-            object-fit: contain;
-            display: block;
-        }
-    </style>
-</head>
-<body>
-
-    <div class="info-side">
-        <div>
-            <a href="index.html" class="back-link">← Back to portfolio</a>
-            <div class="description">
-                <span class="brand-name">Lisa Voronov</span> 
-                that's me. I am a graphic designer with extensive experience in digital and print media. 
-    I work with brands and their intermediaries, creating photo and video content, 
-    visual systems, and images that align with each brand's aesthetics. 
-    For me, design is first and foremost about function and emotion, 
-    and only then about pleasing visuals. 
-    <br>If you like my approach, I look forward to working with you!
-</div>
-        </div>
-
-        <div class="left-footer">
-            <div class="nav-arrows">
-                <a href="project6.html">‹ Previous</a>
-                <a href="project1.html">Next ›</a>
-            </div>
-
-            <div class="footer-bottom">
-                <a href="mailto:zumkult@gmail.com">zumkult@gmail.com</a>
-                <div class="copyright">© 2026 Lisa Voronov</div>
-            </div>
-        </div>
-    </div>
-        
-    <div class="right-side">
-        <img id="dynamic-work" src="work49.png">
-    </div>
-
-    <script>
-        const images = [
-            'work49.png',
-            'work50.png',
-            'work51.png',
-            'work52.png',
-        ];
-
-        let currentIndex = 0;
-        const dynamicImg = document.getElementById('dynamic-work');
-
-        function changeImage() {
-            currentIndex = (currentIndex + 1) % images.length;
-            dynamicImg.src = images[currentIndex];
-        }
-
-        setInterval(changeImage, 1000);
-    </script>
-
-</body>
-</html>
+            /* Фото
