--- a/project3.html
+++ b/project3.html
@@ -38,14 +38,12 @@
             display: flex;
             flex-direction: column;
             justify-content: space-between;
-            /* 10vh сверху и снизу выравнивают текст по границе фото (которое 80vh) */
             padding: 10vh 80px; 
             box-sizing: border-box;
             background: #ffffff;
             z-index: 10;
         }
 
-        /* Унифицированный размер шрифта 15px */
         .back-link, .description, .nav-arrows, .footer-bottom {
             font-size: 15px;
         }
@@ -63,8 +61,8 @@
             line-height: 18px; 
             max-width: 480px;
             margin-top: 40px;
-            text-align: justify; /* Выравнивание по ширине */
-            text-align-last: left; /* Последняя строка прижата влево */
+            text-align: justify;
+            text-align-last: left;
         }
 
         .brand-name {
@@ -75,13 +73,15 @@
         .left-footer {
             display: flex;
             flex-direction: column;
+            /* Единый отступ между всеми элементами футера */
             gap: 10px; 
         }
 
         .nav-arrows {
             display: flex;
             justify-content: space-between;
-            margin-bottom: 10px;
+            /* Убрали margin-bottom, теперь расстояние регулирует gap в .left-footer */
+            margin-bottom: 0; 
         }
 
         .nav-arrows a {
@@ -135,27 +135,15 @@
             </div>
         </div>
 
-    .left-footer {
-    display: flex;
-    flex-direction: column;
-    /* Оставляем gap как основной и единственный разделитель */
-    gap: 10px; 
-}
+        <div class="left-footer">
+            <div class="nav-arrows">
+                <a href="project2.html">‹ Previous</a>
+                <a href="project4.html">Next ›</a>
+            </div>
 
-.nav-arrows {
-    display: flex;
-    justify-content: space-between;
-    /* Убираем лишний margin, чтобы работал только gap */
-    margin-bottom: 0; 
-}
-
-.footer-bottom {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    /* line-height: 1 гарантирует, что невидимые границы текста не съедят место */
-    line-height: 1; 
-}
+            <div class="footer-bottom">
+                <a href="mailto:zumkult@gmail.com">zumkult@gmail.com</a>
+                <div class="copyright">© 2026 Lisa Voronov</div>
             </div>
         </div>
     </div>
