--- a/project1.html
+++ b/project1.html
@@ -25,6 +25,8 @@
             font-family: 'Notbad Sans', sans-serif; 
             color: #0D0D0D;
             -webkit-font-smoothing: antialiased;
+            /* Разрешаем скролл для просмотра всех фото в правой части */
+            overflow-y: auto; 
         }
 
         .info-side {
@@ -36,7 +38,6 @@
             display: flex;
             flex-direction: column;
             justify-content: space-between;
-            /* Выравнивание текста по вертикальной сетке (10% высоты экрана) */
             padding: 10vh 80px; 
             box-sizing: border-box;
             background: #ffffff;
@@ -72,13 +73,15 @@
         .left-footer {
             display: flex;
             flex-direction: column;
-            gap: 10px; 
+            /* Установлен gap 15px для синхронизации с другими страницами */
+            gap: 15px; 
         }
 
         .nav-arrows {
             display: flex;
             justify-content: space-between;
-            margin-bottom: 5px;
+            /* Убираем лишний отступ, управление переходит к gap */
+            margin-bottom: 0; 
         }
 
         .nav-arrows a {
@@ -106,7 +109,6 @@
             margin-left: 50%; 
             display: flex;
             flex-direction: column;
-            /* Внешний отступ справа для контента, чтобы совпадал с левой панелью */
             padding: 10vh 0;
             box-sizing: border-box;
         }
@@ -114,7 +116,7 @@
         .content-side img {
             width: 100%;
             display: block;
-            margin-bottom: 20px; /* Расстояние между изображениями */
+            margin-bottom: 20px;
         }
 
         .content-side img:last-child {
