--- a/project4.html
+++ b/project4.html
@@ -151,15 +151,14 @@
         <img id="dynamic-work" src="work32.gif">
     </div>
 
-    <script>
-        // Изменил расширения на .gif для работы анимации
+   <script>
         const images = [
-            'work32.gif',
-            'work33.gif',
-            'work34.gif',
-            'work35.gif',
-            'work36.gif',
-            'work37.gif'
+            'work32.png',
+            'work33.png',
+            'work34.png',
+            'work35.png',
+            'work36.png',
+            'work37.png'
         ];
 
         let currentIndex = 0;
