--- a/project2.html
+++ b/project2.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Iles Formula | Lisa Voronov</title>
+    <title>ILES FORMULA | Lisa Voronov</title>
     <style>
         @font-face {
             font-family: 'Notbad Sans';
@@ -129,7 +129,7 @@
         <div>
             <a href="index.html" class="back-link">← Back to portfolio</a>
             <div class="description">
-                <span class="brand-name">Iles Formula</span> is a luxury professional hair care brand founded by stylist Wendy Iles. 
+                <span class="brand-name">ILES FORMULA</span> is a luxury professional hair care brand founded by stylist Wendy Iles. 
                 As part of our collaboration, I developed print and digital materials for the brand: catalog design, postcards, 
                 and promotional materials, as well as online banners and visuals for mailings and e-commerce platforms. 
                 <br><br>
