--- a/project4.html
+++ b/project4.html
@@ -128,8 +128,7 @@
             <a href="index.html" class="back-link">← Back to portfolio</a>
             <div class="description">
                 <span class="brand-name">KAA by Bill Kaulitz</span> is a perfume brand. 
-                <br><br>As part of the collaboration, 
-                <br>I served as the brand's photographer, responsible for the creative concept, styling, shooting, and post-production of visuals for social media. 
+                <br><br>As part of the collaboration, I served as the brand's photographer, responsible for the creative concept, styling, shooting, and post-production of visuals for social media. 
                 My task was to create content that reinforces the brand's character and supports its recognizable visual language.
             </div>
         </div>
