--- a/project1.html
+++ b/project1.html
@@ -131,10 +131,9 @@
             <a href="index.html" class="back-link">← Back to portfolio</a>
             <div class="description">
                 <span class="brand-name">SIMPLIE HAIR</span> is a brand specializing in hair extensions and professional training for stylists. 
-                As part of our collaboration, I was responsible for all of the brand's visual and print content: 
+                <br><br>As part of our collaboration, I was responsible for all of the brand's visual and print content: 
                 developing multi-page workbooks and B2B brochures, designing packaging, organizing and producing 
-                product and model photo shoots, and preparing materials for print and digital use. 
-                <br><br>
+                product and model photo shoots, and preparing materials for print and digital use.
                 My work included concept development, layout, visual storytelling design, pre-press preparation, 
                 production control, and post-production of images for the website, e-commerce, and social media.
             </div>
