--- a/project2.html
+++ b/project2.html
@@ -130,9 +130,8 @@
             <a href="index.html" class="back-link">← Back to portfolio</a>
             <div class="description">
                 <span class="brand-name">ILES FORMULA</span> is a luxury professional hair care brand founded by stylist Wendy Iles. 
-                As part of our collaboration, I developed print and digital materials for the brand: catalog design, postcards, 
-                and promotional materials, as well as online banners and visuals for mailings and e-commerce platforms. 
-                <br><br>
+                <br><br>As part of our collaboration, I developed print and digital materials for the brand: catalog design, postcards, 
+                and promotional materials, as well as online banners and visuals for mailings and e-commerce platforms.
                 My work included concept and visual storytelling, layout and typography, image retouching, 
                 pre-press preparation, print coordination, and approval management to ensure a consistent premium brand image
                 across all communication channels.
