--- a/project5.html
+++ b/project5.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <title>SPEEXX | Lisa Voronov</title>
     <style>
-        /* Подключение обычного шрифта */
         @font-face {
             font-family: 'Notbad Sans';
             src: url('Notbad-sans-Regular.woff2') format('woff2');
@@ -12,7 +11,6 @@
             font-style: normal;
         }
 
-        /* Подключение жирного шрифта */
         @font-face {
             font-family: 'Notbad Sans Bold';
             src: url('Notbad-sans-Bold.woff2') format('woff2');
@@ -27,6 +25,10 @@
             font-family: 'Notbad Sans', sans-serif; 
             color: #0D0D0D;
             -webkit-font-smoothing: antialiased;
+            /* Включаем горизонтальный скролл */
+            overflow-x: auto;
+            overflow-y: hidden;
+            height: 100vh;
         }
 
         .info-side {
@@ -38,28 +40,32 @@
             display: flex;
             flex-direction: column;
             justify-content: space-between;
-            padding: 60px;
+            padding: 10vh 80px; 
             box-sizing: border-box;
             background: #ffffff;
             z-index: 10;
         }
 
+        .back-link, .description, .nav-arrows, .footer-bottom {
+            font-size: 15px;
+        }
+
         .back-link {
             text-decoration: none;
             color: #0D0D0D;
-            font-size: 10px;
             text-transform: uppercase;
             letter-spacing: 0.1em;
+            line-height: 1;
         }
 
         .description {
-            font-size: 10px; 
-            line-height: 15px; 
-            max-width: 500px;
+            line-height: 18px; 
+            max-width: 480px;
             margin-top: 40px;
+            text-align: justify;
+            text-align-last: left;
         }
 
-        /* Стиль для жирного названия бренда */
         .brand-name {
             font-family: 'Notbad Sans Bold', sans-serif;
             font-weight: bold;
@@ -68,14 +74,13 @@
         .left-footer {
             display: flex;
             flex-direction: column;
-            /* Уменьшено в два раза (было 60px, стало 30px) */
-            gap: 30px; 
+            gap: 15px; 
         }
 
         .nav-arrows {
             display: flex;
             justify-content: space-between;
-            font-size: 10px;
+            margin-bottom: 0; 
         }
 
         .nav-arrows a {
@@ -84,15 +89,13 @@
             transition: opacity 0.3s;
         }
 
-        .nav-arrows a:hover {
-            opacity: 0.5;
-        }
+        .nav-arrows a:hover { opacity: 0.5; }
 
         .footer-bottom {
             display: flex;
             justify-content: space-between;
-            font-size: 10px;
             align-items: center;
+            line-height: 1;
         }
 
         .footer-bottom a {
@@ -100,16 +103,28 @@
             text-decoration: none;
         }
 
+        /* Правая часть с горизонтальной лентой */
         .content-side {
-            width: 50%;
-            margin-left: 50%; 
             display: flex;
-            flex-direction: column;
+            align-items: center;
+            /* margin-left 50% чтобы не перекрывать левую панель */
+            margin-left: 50%;
+            padding: 0 80px; /* Отступы по краям ленты */
+            height: 100vh;
+            white-space: nowrap;
         }
 
         .content-side img {
-            width: 100%;
+            /* Высота 80vh как в Trendyol для эффекта "рамки" */
+            height: 80vh;
+            width: auto;
             display: block;
+            margin-right: 40px; /* Расстояние между фото */
+            object-fit: contain;
+        }
+
+        .content-side img:last-child {
+            margin-right: 0;
         }
     </style>
 </head>
@@ -142,8 +157,8 @@
         <img src="work40.png">
         <img src="work41.png">
         <img src="work42.png">
-      <img src="work43.png">
-      <img src="work44.png">
+        <img src="work43.png">
+        <img src="work44.png">
     </div>
 
 </body>
