--- a/project5.html
+++ b/project5.html
@@ -144,7 +144,8 @@
         <div>
             <a href="index.html" class="back-link">← Back to portfolio</a>
             <div class="description">
-                <span class="brand-name">SPEEXX</span> is a brand.
+                <span class="brand-name">SPEEXX</span> is an international platform for corporate training and language skills development. 
+                <br><br>As part of this collaboration, I developed informative infographic cards for LinkedIn, combining design thinking with AI tools to visualize data and accelerate the creative process. My work included content concept, structuring complex information into visual formats, and creating visuals that reinforce the brand's expert image in a professional environment.
             </div>
         </div>
 
