--- a/project1.html
+++ b/project1.html
@@ -25,8 +25,9 @@
             font-family: 'Notbad Sans', sans-serif; 
             color: #0D0D0D;
             -webkit-font-smoothing: antialiased;
-            /* Разрешаем скролл для просмотра всех фото в правой части */
             overflow-y: auto; 
+            /* Плавный скролл для браузеров */
+            scroll-behavior: smooth; 
         }
 
         .info-side {
@@ -44,7 +45,6 @@
             z-index: 10;
         }
 
-        /* Унифицированный размер шрифта 15px */
         .back-link, .description, .nav-arrows, .footer-bottom {
             font-size: 15px;
         }
@@ -73,14 +73,12 @@
         .left-footer {
             display: flex;
             flex-direction: column;
-            /* Установлен gap 15px для синхронизации с другими страницами */
             gap: 15px; 
         }
 
         .nav-arrows {
             display: flex;
             justify-content: space-between;
-            /* Убираем лишний отступ, управление переходит к gap */
             margin-bottom: 0; 
         }
 
@@ -117,6 +115,15 @@
             width: 100%;
             display: block;
             margin-bottom: 20px;
+            /* ОПТИМИЗАЦИЯ: Подсказываем браузеру заранее готовить слой для прокрутки */
+            will-change: transform;
+            /* Плавное появление при загрузке */
+            animation: fadeIn 0.5s ease-in-out;
+        }
+
+        @keyframes fadeIn {
+            from { opacity: 0; }
+            to { opacity: 1; }
         }
 
         .content-side img:last-child {
@@ -153,11 +160,11 @@
     </div>
 
     <div class="content-side">
-        <img src="work17.png">
-        <img src="work18.png">
-        <img src="work19.png">
-        <img src="work20.png">
-        <img src="work21.png">
+        <img src="work17.png" loading="eager" decoding="async">
+        <img src="work18.png" loading="lazy" decoding="async">
+        <img src="work19.png" loading="lazy" decoding="async">
+        <img src="work20.png" loading="lazy" decoding="async">
+        <img src="work21.png" loading="lazy" decoding="async">
     </div>
 
 </body>
